# mesh_agent

./: .gitignore  README.md  app_streamlit.py  app_streamlit_kh.py  langgraph.json  pyproject.toml
src/agents/: kirby_hammurabi_agent.py  mesh_agent.py
src/agents/kirby_hammurabi/: state.py
src/agents/kirby_hammurabi/nodes/conversation/: node.py  prompt.py
src/agents/kirby_hammurabi/nodes/extractor/: node.py  prompt.py
src/agents/kirby_hammurabi/nodes/file_parser/: node.py
src/agents/kirby_hammurabi/nodes/generator/: node.py
src/agents/mesh/: state.py
src/agents/mesh/nodes/bitbucket_reader/: node.py
src/agents/mesh/nodes/bitbucket_writer/: node.py
src/agents/mesh/nodes/conversation/: __init__.py  node.py  prompt.py
src/agents/mesh/nodes/extractor/: node.py  prompt.py
src/agents/mesh/nodes/file_parser/: node.py
src/agents/mesh/nodes/generator/: controlm_params.py  node.py
src/services/: bitbucket.py  config_parser.py  correlative_parser.py  datum_parser.py
